frontend/tests/errors/ER-011/modulo_by_zero/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Division by zero traps at runtime | Modulo by zero compiles but traps at runtime


&^main() -> #i32 {
    10 % 0;
}
